[gd_scene load_steps=2 format=3 uid="uid://sug35qkwhnu4"]

[ext_resource type="Script" uid="uid://pnj0itl2ta07" path="res://scripts/Network/waiting_room.gd" id="1_0q7jc"]

[node name="waiting_room" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0q7jc")

[node name="plr_count" type="Label" parent="."]
layout_mode = 0
offset_left = 365.5
offset_top = 27.445
offset_right = 434.5
offset_bottom = 90.4451
theme_override_font_sizes/font_size = 45
text = "0/5"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = 405.0
offset_right = 484.0
offset_bottom = 476.00018
theme_override_font_sizes/font_size = 45
text = "Start"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 266.0
offset_top = 113.0
offset_right = 543.0
offset_bottom = 380.0

[node name="Player" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="Player2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="Player3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="Player4" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="Player5" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 123.0
offset_bottom = 211.0

[node name="wizard" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Wizard"

[node name="druid" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Druid
"

[node name="bard" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Bard"

[node name="rogue" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Rogue"

[node name="barbarian" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Barbarian
"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer2/wizard" to="." method="_on_wizard_pressed"]
[connection signal="pressed" from="VBoxContainer2/druid" to="." method="_on_druid_pressed"]
[connection signal="pressed" from="VBoxContainer2/bard" to="." method="_on_bard_pressed"]
[connection signal="pressed" from="VBoxContainer2/rogue" to="." method="_on_rogue_pressed"]
[connection signal="pressed" from="VBoxContainer2/barbarian" to="." method="_on_barbarian_pressed"]
